# Omega

./: .gitmodules
.github/: pull_request_template.md
.github/workflows/: omega-build-workflow.yml  omega-docs-workflow.yml
Omega/: genindex.html  index.html  objects.inv  search.html  searchindex.js
Omega/_sources/design/: VertCoord.md.txt
Omega/_sources/devGuide/: AuxiliaryState.md.txt  Broadcast.md.txt  DataTypes.md.txt  IOStreams.md.txt  MachEnv.md.txt
Omega/_sources/userGuide/: Broadcast.md.txt
Omega/design/: AuxiliaryState.html  AuxiliaryVariables.html  Broadcast.html  Config.html  DataTypes.html  Decomp.html  Driver.html  EOS.html  Error.html  Halo.html  HorzMeshClass.html  IO.html  IOStreams.html  Logging.html  MachEnv.html  Metadata.html  OmegaV0ShallowWater.html  OmegaV1GoverningEqns.html  Reductions.html  State.html  Template.html  Tendencies.html  Tendency.html  TimeMgr.html  TimeStepping.html  Timers.html  Tracers.html  TridiagonalSolver.html  VertCoord.html  VerticalMixingCoeff.html
Omega/devGuide/: AuxiliaryState.html  AuxiliaryVariables.html  Broadcast.html  BuildDocs.html  CMakeBuild.html  CondaEnv.html  Config.html  DataTypes.html  Decomp.html  Dimension.html  Docs.html  Driver.html  EOS.html  Error.html  Field.html  Halo.html  HorzMesh.html  HorzOperators.html  IO.html  IOStreams.html  Linting.html  Logging.html  MachEnv.html  OceanState.html  QuickStart.html  Reductions.html  Tendencies.html  TendencyTerms.html  TimeMgr.html  TimeStepping.html  Timing.html  Tracers.html  TridiagonalSolvers.html  VertCoord.html
Omega/userGuide/: AuxiliaryState.html  AuxiliaryVariables.html  Broadcast.html  Config.html  DataTypes.html  Decomp.html  Dimension.html  Driver.html  EOS.html  Error.html  Field.html  Halo.html  HorzMesh.html  HorzOperators.html  IO.html  IOStreams.html  Logging.html  MachEnv.html  OceanState.html  OmegaBuild.html  QuickStart.html  Reductions.html  Tendencies.html  TendencyTerms.html  TimeMgr.html  TimeStepping.html  Timing.html  Tracers.html  TridiagonalSolvers.html  VertCoord.html
cime_config/machines/: config_machines.xml
components/: CMakeLists.txt
components/cmake/: build_omega.cmake
components/omega/: CMakeLists.txt  OmegaBuild.cmake
components/omega/configs/: Default.yml
components/omega/doc/: conf.py  index.md
components/omega/doc/design/: AuxiliaryState.md  AuxiliaryVariables.md  Broadcast.md  Driver.md  EOS.md  IOStreams.md  Logging.md  Metadata.md  OmegaV0ShallowWater.md  OmegaV1GoverningEqns.md  Reductions.md  Template.md  Tendencies.md  Tendency.md  TimeMgr.md  TimeStepping.md  VertCoord.md  VerticalMixing.md  VerticalMixingCoeff.md
components/omega/doc/devGuide/: AuxiliaryVariables.md  Broadcast.md  CMakeBuild.md  Config.md  DataTypes.md  Decomp.md  EOS.md  Eos.md  Field.md  HorzOperators.md  IO.md  IOField.md  MachEnv.md  MetaData.md  OceanState.md  QuickStart.md  Reductions.md  Tendencies.md  TendencyTerms.md  Timing.md  Tracers.md  VertCoord.md
components/omega/doc/userGuide/: AuxiliaryVariables.md  Broadcast.md  Config.md  Decomp.md  EOS.md  Eos.md  IO.md  MetaData.md  OmegaBuild.md  Timing.md  VertCoord.md
components/omega/src/: CMakeLists.txt
components/omega/src/base/: Broadcast.cpp  Broadcast.h  DataTypes.h  Decomp.cpp  Decomp.h  Halo.cpp  Halo.h  IO.cpp  IO.h  MachEnv.cpp  MachEnv.h  TriDiagSolvers.h
components/omega/src/drivers/: drvdummy.cpp  main.cpp
components/omega/src/drivers/standalone/: OceanDriver.cpp
components/omega/src/infra/: Broadcast.cpp  Broadcast.h  Config.cpp  Dimension.cpp  Error.h  Field.cpp  Field.h  IOStream.cpp  IOStream.h  Logging.cpp  MetaData.cpp  MetaData.h  OmegaKokkos.h  TimeMgr.cpp  TimeMgr.h  logging.cpp  logging.h
components/omega/src/ocn/: AuxiliaryState.cpp  AuxiliaryState.h  CustomTendencyTerms.cpp  CustomTendencyTerms.h  Eos.cpp  Eos.h  EosConstants.h  HorzMesh.cpp  HorzMesh.h  HorzOperators.cpp  HorzOperators.h  OceanDriver.h  OceanFinal.cpp  OceanInit.cpp  OceanRun.cpp  OceanState.cpp  OceanState.h  Tendencies.cpp  Tendencies.h  TendencyTerms.cpp  TendencyTerms.h  Tracers.cpp  Tracers.h  VertCoord.cpp  VertCoord.h  miniWeather.cpp  ocndummy.cpp  ocndummy.h
components/omega/src/ocn/auxiliaryVars/: KineticAuxVars.cpp  KineticAuxVars.h  LayerThicknessAuxVars.cpp  LayerThicknessAuxVars.h  TracerAuxVars.cpp  TracerAuxVars.h  VelocityDel2AuxVars.cpp  VelocityDel2AuxVars.h  VorticityAuxVars.cpp  VorticityAuxVars.h  WindForcingAuxVars.cpp  WindForcingAuxVars.h
components/omega/src/timeStepping/: RungeKutta4Stepper.cpp  TimeStepper.cpp  TimeStepper.h
components/omega/test/: CMakeLists.txt  test_main.cpp  testdummy.cpp
components/omega/test/base/: BroadcastTest.cpp  DataTypesTest.cpp  DecompTest.cpp  HaloTest.cpp  IOTest.cpp  MachEnvTest.cpp  ReductionsTest.cpp  TriDiagSolversTest.cpp
components/omega/test/drivers/: StandaloneDriverTest.cpp
components/omega/test/infra/: BroadcastTest.cpp  ConfigTest.cpp  DimensionTest.cpp  FieldTest.cpp  IOFieldTest.cpp  IOStreamTest.cpp  MetadataTest.cpp  OmegaKokkosTest.cpp
components/omega/test/ocn/: AuxiliaryStateTest.cpp  AuxiliaryVarsTest.cpp  EosTest.cpp  HorzMeshTest.cpp  HorzOperatorsTest.cpp  OceanTestCommon.h  StateTest.cpp  TendenciesTest.cpp  TendencyTermsTest.cpp  TracersTest.cpp  VertCoordTest.cpp
components/omega/test/timeStepping/: TimeStepperTest.cpp
configs/: Default.yml
omega/develop/: genindex.html  index.html  objects.inv  search.html  searchindex.js
omega/develop/design/: AuxiliaryState.html  AuxiliaryVariables.html  Broadcast.html  Config.html  DataTypes.html  Decomp.html  Driver.html  EOS.html  Error.html  Halo.html  HorzMeshClass.html  IO.html  IOStreams.html  Logging.html  MachEnv.html  Metadata.html  OmegaV0ShallowWater.html  Reductions.html  State.html  Template.html  Tendencies.html  Tendency.html  TimeMgr.html  TimeStepping.html  Timers.html  Tracers.html  TridiagonalSolver.html  VerticalMixingCoeff.html
omega/develop/devGuide/: AuxiliaryState.html  AuxiliaryVariables.html  Broadcast.html  BuildDocs.html  CMakeBuild.html  CondaEnv.html  Config.html  DataTypes.html  Decomp.html  (+22 more)
(+27 files in other folders)
